# GeneralTree

./: .Rbuildignore  .editorconfig  .gitignore  .gitmodules  .travis.yml  .vimrc  .ycm_extra_conf.py  DESCRIPTION  LICENSE  Makefile  NAMESPACE  README.md  appveyor.yml  cleanup  codecov.yml  configure  configure.ac
R/: GeneralTree.R  GeneralTreeCPP.R  RcppExports.R  benchmark.R  casting.R  iterators.R  operators.R  plot.R  print.R
docs/: GeneralTree.html  addChild.html  addSibling.html  addSiblingNode.html  as.GeneralTree.data.frame.html  as.GeneralTree.expression.html  as.GeneralTree.html  as.data.frame.GeneralTree.html  branch_depth.html  data.html  delete.html  deleteId.html  generate_grViz.html  getChildData.html  getChildId.html  getChildNodes.html  getIterVal.GeneralTreeIter.html  getIterVal.html  have_child.html  have_parent.html  have_private_siblings.html  have_siblings.html  id.html  index.html  initialize.html  isDiscovered.html  isRootDiscovered.html  isSingletonTree.html  is_last_sibling.html  is_root.html  iter.GeneralTree.html  iteratorImpl.html  left_child.html  nextElem.GeneralTree.html  nextElem.GeneralTreeIter.html  nextElemWorkerImpl.html  nodeInfoToString.html  parent.html  plot.GeneralTree.html  print.GeneralTree.html  (+11 more)
man/: GeneralTree.Rd  addChild.Rd  addSibling.Rd  addSiblingNode.Rd  as.GeneralTree.Rd  as.GeneralTree.data.frame.Rd  as.GeneralTree.expression.Rd  as.data.frame.GeneralTree.Rd  assign.Rd  benchmarkGeneralTree.Rd  branchToList.Rd  branch_depth.Rd  data.Rd  dataWorker.Rd  deep_clone.GeneralTree.Rd  deep_clone.Rd  delete.Rd  deleteId.Rd  deleteKey.Rd  depth.Rd  equals-.GeneralTree.Rd  equals.Rd  generate_grViz.Rd  getBranchData.Rd  getBranchInfo.Rd  getBranchKeys.Rd  getChildData.Rd  getChildId.Rd  getChildNodes.Rd  getChildrenData.Rd  getChildrenInfo.Rd  getChildrenKeys.Rd  getIterVal.GeneralTreeIter.Rd  getIterVal.Rd  getIterVal.generaltreeiter.Rd  getLeafsData.Rd  getLeafsInfo.Rd  getLeafsKeys.Rd  getSiblingsInfo.Rd  have_child.Rd  (+34 more)
src/: AccessFunctors.h  GeneralTreeInternal.cpp  GeneralTreeInternal.h  ListFunctors.cpp  ListFunctors.h  Makevars  Makevars.in  Makevars.win  RcppExports.cpp  SEXPListFunctor.cpp  SEXPListFunctor.h  TreeNode.cpp  TreeNode.h  config.h.in  functions.cpp  general_tree.cpp  general_tree.h  general_tree.hpp  key_visitor.cpp  key_visitor.h  test-GeneralTreeInternals.cpp  test-TreeNode.cpp  tree_types.h
tests/: testthat.R
tests/testthat/: test-cpp.R  test_ActionFunctions.R  test_AddNodes.R  test_GeneralTreeInternals.R  test_Parent.R  test_SearchTree.R  test_apply.R  test_benchmark.R  test_casting.R  test_clone.R  test_delete.R  test_getBranchData.R  test_getChildData.R  test_getChildrenData.R  test_getLeafs.R  test_getSiblingData.R  test_getSiblingsData.R  test_plot.R  test_print.R  test_treeDepth.R  test_treeDepth.R-base  test_treeDepth.R.orig  test_treeWalker.R  test_update.R
vignettes/: tutorial.Rmd
